[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.124"
tempfile = "3.11.0"
toml = "0.8.19"
tracing = "0.1.40"

[[bin]]
name = "sketch1"
path = "src/sketches/run_cargo_build.rs"